--- a/login.html
+++ b/login.html
@@ -159,13 +159,13 @@
         }
 
         .logo img {
-            height: 64px;
-            width: 64px;
+            height: 128px;
+            width: 128px;
             border-radius: 10px;
             object-fit: contain;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 4px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            background: none; 
+            padding: 0;       
+            box-shadow: none; 
         }
 
         .logo span {
@@ -1026,5 +1026,6 @@
 
 </body>
 </html>
+
 
 
