--- a/login.html
+++ b/login.html
@@ -159,8 +159,8 @@
         }
 
         .logo img {
-            height: 128px;
-            width: 128px;
+            height: 20%;
+            width: 20%;
             border-radius: 10px;
             object-fit: contain;
             background: none; 
@@ -1026,6 +1026,7 @@
 
 </body>
 </html>
+
 
 
 
