--- a/login.html
+++ b/login.html
@@ -159,8 +159,8 @@
         }
 
         .logo img {
-            height: 60%;
-            width: 60%;
+            height: 100px;
+            width: 100px;
             border-radius: 10px;
             object-fit: contain;
             background: none; 
@@ -1026,6 +1026,7 @@
 
 </body>
 </html>
+
 
 
 
