--- a/dashboard.html
+++ b/dashboard.html
@@ -2923,6 +2923,39 @@ let lastEmailTotal = 0;
 
 function showEmailDetailModal(modal) {
   if (!modal) return;
+
+  // Zobrazíme overlay hned, aby klik nečekal na další interakci
+  modal.style.display = 'flex';
+  modal.setAttribute('aria-hidden', 'false');
+
+  // Přidání třídy ve stejném framu zajistí, že se nevynechá první vykreslení
+  modal.classList.add('show');
+}
+
+function hideEmailDetailModal(modal) {
+  if (!modal) return;
+
+  modal.classList.remove('show');
+  modal.setAttribute('aria-hidden', 'true');
+
+  const finalize = () => {
+    modal.style.display = 'none';
+  };
+
+  const { transitionDuration, transitionDelay } = getComputedStyle(modal);
+  const hasTransition = (parseFloat(transitionDuration) || 0) > 0 || (parseFloat(transitionDelay) || 0) > 0;
+
+  if (hasTransition) {
+    modal.addEventListener('transitionend', finalize, { once: true });
+    // Pojistka pro případy, kdy se událost nevyvolá (např. display:none)
+    setTimeout(finalize, 350);
+  } else {
+    finalize();
+  }
+}
+
+function showEmailDetailModal(modal) {
+  if (!modal) return;
   modal.style.display = 'flex';
   modal.setAttribute('aria-hidden', 'false');
   requestAnimationFrame(() => modal.classList.add('show'));
@@ -5850,8 +5883,7 @@ if (!currentPrimary || !connectedEmails.some(a => a.email === currentPrimary)) {
     document.body.style.overflow = '';
   }));
 
-  // Klik mimo modal zavře
- modal?.addEventListener('click', (e) => {
+  modal?.addEventListener('click', (e) => {
     if (e.target === modal) {
       hideEmailDetailModal(modal);
       document.body.style.overflow = '';
@@ -6916,7 +6948,7 @@ function syncProMeta(){
       hideEmailDetailModal(detailModal);
     }
     document.body.style.overflow = '';
-
+      
     const inlineInstructions = document.getElementById('ed-ai-instructions')?.value || '';
     window.aiComposer?.open(ctx, {
       instructions: inlineInstructions,
@@ -7319,6 +7351,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
