--- a/dashboard.html
+++ b/dashboard.html
@@ -305,43 +305,30 @@
 }
 .ai-composer-footer .btn-primary { min-width:180px; }
 .ai-inline-card { grid-column: 1 / -1; }
-.ai-inline-card .pro-body-card__content { display:grid; gap:1rem; }
-.ai-inline-input { min-height:120px; resize:vertical; }
-.ai-inline-controls { display:flex; flex-direction:column; gap:.9rem; align-items:stretch; padding:1rem; background:#f8fafc; border:1px solid #e2e8f0; border-radius:12px; }
-.ai-inline-hint {
-    background:#eef2ff;
-    border-radius:12px;
-    padding:.9rem 1.1rem;
-    color:#1e293b;
-    font-size:.9rem;
-    line-height:1.5;
-}
-.ai-inline-hint strong { display:block; margin-bottom:.35rem; }
-.ai-inline-note { font-size:.85rem; color:#475569; }
+.ai-inline-card .pro-body-card__title { display:flex; align-items:center; gap:.75rem; }
+.ai-inline-icon { display:inline-flex; align-items:center; justify-content:center; width:32px; height:32px; border-radius:10px; background:linear-gradient(135deg,#6366f1,#8b5cf6); color:#fff; font-size:1.15rem; }
+.ai-inline-content { display:grid; gap:1.4rem; align-items:start; }
+.ai-inline-main { display:flex; flex-direction:column; gap:.75rem; }
+.ai-inline-lead { font-size:.95rem; color:#475569; line-height:1.55; }
+.ai-inline-input { min-height:130px; resize:vertical; background:#f8fafc; border:1px solid #dbe3f3; border-radius:14px; padding:1rem 1.1rem; line-height:1.6; box-shadow: inset 0 1px 0 rgba(255,255,255,0.8); transition:border-color .2s ease, box-shadow .2s ease; }
+.ai-inline-input:focus { outline:none; border-color:#818cf8; box-shadow:0 0 0 3px rgba(99,102,241,0.18); background:#fff; }
+.ai-inline-side { display:flex; flex-direction:column; gap:1rem; background:#f1f5f9; border:1px solid #e2e8f0; border-radius:16px; padding:1.1rem 1.25rem; box-shadow: inset 0 1px 0 rgba(255,255,255,0.6); }
+.ai-inline-hint { background:rgba(99,102,241,0.08); border:1px solid rgba(99,102,241,0.18); border-radius:12px; padding:1rem 1.15rem; color:#312e81; line-height:1.5; }
+.ai-inline-hint-title { display:block; font-weight:600; margin-bottom:.55rem; font-size:.92rem; color:#1e1b4b; }
+.ai-inline-list { margin:0; padding-left:1.1rem; display:flex; flex-direction:column; gap:.45rem; font-size:.9rem; color:#4338ca; }
+.ai-inline-button { width:100%; display:inline-flex; justify-content:center; gap:.5rem; font-weight:600; box-shadow:0 12px 25px rgba(99,102,241,0.18); }
+.ai-inline-note { font-size:.85rem; color:#475569; text-align:center; }
 
 @media (min-width: 900px) {
-    .ai-inline-card .pro-body-card__content {
-        grid-template-columns: minmax(0, 1fr) minmax(220px, 280px);
-        align-items: stretch;
-        gap: 1.2rem 1.6rem;
+    .ai-inline-content {
+        grid-template-columns: minmax(0, 1fr) minmax(220px, 260px);
     }
-    .ai-inline-card .pro-body-card__content > div:first-child {
-        grid-row: 1 / span 2;
-    }
-    .ai-inline-controls {
-        padding: 1.25rem;
-        background: #f8fafc;
-        border: 1px solid #e2e8f0;
-        border-radius: 14px;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.8);
-    }
-    .ai-inline-controls .btn {
-        align-self: flex-end;
-    }
-    .ai-inline-note {
-        grid-column: 1 / -1;
-        margin-top: -0.15rem;
-    }
+}
+
+@media (max-width: 899px) {
+    .ai-inline-side { padding:1rem; }
+    .ai-inline-button { width:auto; align-self:flex-start; }
+    .ai-inline-note { text-align:left; }
 }
 
 .analysis-section {
@@ -2204,20 +2191,28 @@
       </div>
 
       <div class="pro-body-card ai-inline-card">
-        <div class="pro-body-card__title">Rychlá AI odpověď</div>
-        <div class="pro-body-card__content">
-          <div>
-            <label class="form-label" for="ed-ai-instructions" style="margin-bottom:.35rem;">Vložte svůj text odpovědi</label>
+        <div class="pro-body-card__title">
+          <span class="ai-inline-icon">✨</span>
+          <span>Rychlá AI odpověď</span>
+        </div>
+        <div class="pro-body-card__content ai-inline-content">
+          <div class="ai-inline-main">
+            <p class="ai-inline-lead">Vložte sem odpověď, kterou chcete nechat AI uhladit. Zachováme význam i podpis.</p>
+            <label class="form-label" for="ed-ai-instructions">Text k doladění</label>
             <textarea id="ed-ai-instructions" class="form-control ai-inline-input" rows="3" placeholder="Zkopírujte sem odpověď, kterou chcete jen stylisticky vylepšit…"></textarea>
           </div>
-          <div class="ai-inline-controls">
+          <div class="ai-inline-side">
             <div class="ai-inline-hint">
-              <strong>AI jen uhladí váš text</strong>
-              Zachová význam, důležité informace i podpis podle nastavení účtu.
+              <span class="ai-inline-hint-title">Co pro vás AI udělá</span>
+              <ul class="ai-inline-list">
+                <li>Vylepší tón a pravopis bez zbytečných okolků.</li>
+                <li>Nechá všechny důležité informace na svém místě.</li>
+                <li>Podpis i jazyk zachová podle profilu.</li>
+              </ul>
             </div>
-            <button class="btn btn-primary" id="ed-open-composer" type="button">✨ Upravit odpověď</button>
+            <button class="btn btn-primary ai-inline-button" id="ed-open-composer" type="button">✨ Upravit odpověď</button>
+            <p class="ai-inline-note">Hotovo během pár sekund – stačí vložit text a kliknout.</p>
           </div>
-          <p class="ai-inline-note">AI nepřidá žádné nové body – pouze zlepší formulace podle stylu účtu.</p>
         </div>
       </div>
     </div>
@@ -7324,6 +7319,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
