--- a/dashboard.html
+++ b/dashboard.html
@@ -312,7 +312,11 @@
 }
 .ai-inline-card .pro-body-card__title { display:flex; align-items:center; gap:.75rem; }
 .ai-inline-icon { display:inline-flex; align-items:center; justify-content:center; width:32px; height:32px; border-radius:10px; background:linear-gradient(135deg,#6366f1,#8b5cf6); color:#fff; font-size:1.15rem; }
-.ai-inline-content { display:grid; gap:1.4rem; align-items:stretch; }
+.ai-inline-content {
+    display:grid;
+    gap:1.4rem;
+    align-items:stretch;
+}
 .ai-inline-main { display:flex; flex-direction:column; gap:.75rem; min-width:0; }
 .ai-inline-lead { font-size:.95rem; color:#475569; line-height:1.55; }
 .ai-inline-input { min-height:130px; resize:vertical; background:#f8fafc; border:1px solid #dbe3f3; border-radius:14px; padding:1rem 1.1rem; line-height:1.6; box-shadow: inset 0 1px 0 rgba(255,255,255,0.8); transition:border-color .2s ease, box-shadow .2s ease; }
@@ -324,13 +328,13 @@
 .ai-inline-button { width:100%; display:inline-flex; justify-content:center; gap:.5rem; font-weight:600; box-shadow:0 12px 25px rgba(99,102,241,0.18); }
 .ai-inline-note { font-size:.85rem; color:#475569; text-align:center; }
 
-@media (min-width: 900px) {
+@media (min-width: 720px) {
     .ai-inline-content {
-        grid-template-columns: minmax(0, 1fr) minmax(260px, 320px);
+        grid-template-columns: minmax(0, 1fr) minmax(260px, 340px);
     }
+}
 
-
-@media (max-width: 899px) {
+@media (max-width: 719px) {
     .ai-inline-side { padding:1rem; }
     .ai-inline-button { width:auto; align-self:flex-start; }
     .ai-inline-note { text-align:left; }
@@ -7324,6 +7328,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
