--- a/dashboard.html
+++ b/dashboard.html
@@ -312,6 +312,9 @@
     width: 100%;
     max-width: none;
     align-self: stretch;
+    min-height: clamp(360px, 52vh, 520px);
+    display: flex;
+    flex-direction: column;
 }
 .ai-inline-card .pro-body-card__title { display:flex; align-items:center; gap:.75rem; }
 .ai-inline-icon { display:inline-flex; align-items:center; justify-content:center; width:32px; height:32px; border-radius:10px; background:linear-gradient(135deg,#6366f1,#8b5cf6); color:#fff; font-size:1.15rem; }
@@ -320,10 +323,30 @@
     gap:1.4rem;
     align-items:stretch;
     grid-template-columns: minmax(0, 1fr);
+    flex: 1;
+    min-height: 0;
 }
-.ai-inline-main { display:flex; flex-direction:column; gap:.75rem; min-width:0; }
+.ai-inline-main {
+    display:flex;
+    flex-direction:column;
+    gap:.75rem;
+    min-width:0;
+    min-height:0;
+}
 .ai-inline-lead { font-size:.95rem; color:#475569; line-height:1.55; }
-.ai-inline-input { min-height:130px; resize:vertical; background:#f8fafc; border:1px solid #dbe3f3; border-radius:14px; padding:1rem 1.1rem; line-height:1.6; box-shadow: inset 0 1px 0 rgba(255,255,255,0.8); transition:border-color .2s ease, box-shadow .2s ease; }
+.ai-inline-input {
+    min-height: clamp(220px, 36vh, 420px);
+    resize:vertical;
+    background:#f8fafc;
+    border:1px solid #dbe3f3;
+    border-radius:14px;
+    padding:1rem 1.1rem;
+    line-height:1.6;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.8);
+    transition:border-color .2s ease, box-shadow .2s ease;
+    flex:1;
+    min-width:0;
+}
 .ai-inline-input:focus { outline:none; border-color:#818cf8; box-shadow:0 0 0 3px rgba(99,102,241,0.18); background:#fff; }
 .ai-inline-side { display:flex; flex-direction:column; gap:1rem; background:#f1f5f9; border:1px solid #e2e8f0; border-radius:16px; padding:1.1rem 1.25rem; box-shadow: inset 0 1px 0 rgba(255,255,255,0.6); min-width:0; align-self:stretch; }
 .ai-inline-hint { background:rgba(99,102,241,0.08); border:1px solid rgba(99,102,241,0.18); border-radius:12px; padding:1rem 1.15rem; color:#312e81; line-height:1.5; }
@@ -335,6 +358,7 @@
 @media (min-width: 720px) {
     .ai-inline-content {
         grid-template-columns: minmax(0, 1fr) minmax(280px, 360px);
+        min-height: clamp(360px, 48vh, 560px);
     }
 }
 
@@ -7332,6 +7356,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
