--- a/dashboard.html
+++ b/dashboard.html
@@ -56,14 +56,14 @@
 .pro-modal__body {
   padding: 18px;
   display:grid;
-  grid-template-columns: minmax(220px, 270px) minmax(0,1fr);
+  grid-template-columns: minmax(250px, 320px) minmax(0,1fr);
   gap: 20px;
   overflow-y: auto;
   flex: 1;
   min-height: 0;
   align-items: stretch;
-  padding-bottom: clamp(140px, 18vh, 220px);
-  scroll-padding-bottom: clamp(140px, 18vh, 220px);
+  padding-bottom: clamp(72px, 12vh, 140px);
+  scroll-padding-bottom: clamp(72px, 12vh, 140px);
 }
 .pro-modal__body > * { min-width:0; }
 @media (max-width: 860px) {
@@ -76,7 +76,7 @@
 .pro-meta {
   background: #f8fafc; border: 1px solid #e5e7eb; border-radius: 14px; padding: 12px;
 }
-.pro-meta__row { display:grid; grid-template-columns: 90px 1fr; gap: 10px; padding: 8px 6px; align-items:start; }
+.pro-meta__row { display:grid; grid-template-columns: 110px 1fr; gap: 12px; padding: 10px 8px; align-items:start; }
 .pro-meta__label { font-size:.8rem; color:#64748b; }
 .pro-meta__value { font-size:.95rem; color:#0f172a; word-break:break-word; overflow-wrap:anywhere; }
 
@@ -99,7 +99,8 @@
 }
 #ed-body {
   overflow-y: auto;
-  max-height: clamp(280px, calc(80vh - 240px), 680px);
+  max-height: clamp(420px, calc(88vh - 260px), 820px);
+  min-height: clamp(320px, 40vh, 520px);
   padding-right: 4px;
   scrollbar-gutter: stable;
 }
@@ -7356,6 +7357,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
